tests/baselines/reference/letDeclarations-useBeforeDefinitionInBlockScope.errors.txt
tests/cases/compiler/letDeclarations-useBeforeDefinitionInBlockScope.ts(2,5): error TS2448: Block-scoped variable 'b' used before its declaration.


==== tests/cases/compiler/letDeclarations-useBeforeDefinitionInBlockScope.ts (1 errors) ====
    if (false) {
        b; // still an error
        ~
!!! error TS2448: Block-scoped variable 'b' used before its declaration.
    }
    let b;